--- a/Content/themes/metro.dark/ui.dark.calendar.css
+++ b/Content/themes/metro.dark/ui.dark.calendar.css
@@ -271,7 +271,7 @@ div.day-title-panel {
         line-height: 24px;
     }
 
-ul.hour-name {
+.hour-name {
     position: absolute;
     background-color: #3C3F41;
     width: 80px;
@@ -281,23 +281,34 @@ ul.hour-name {
     margin: 0px;
 }
 
-    ul.hour-name li {
-        list-style: none;
-        padding: 0px;
-        margin: 0px;
-        overflow: hidden;
-        width: 100%;
+.hour-name-table {
+    table-layout:fixed;
+    width: 100%;
+    height: auto;
+}
+
+    .hour-name-table td {
+        height: 24px;
+        text-align: center;
+        border-right: solid 1px transparent;
+        border-bottom: solid 1px transparent;
     }
 
-        ul.hour-name li span {
-            font-size: 20px;
-            line-height: 24px;
-            color: #666666;
-            margin-left: 5px;
-        }
-
-    ul.hour-name li.odd {
+    .hour-name-table td.odd {
+        border-bottom: dotted 1px transparent;
     }
+
+.hour-name-text {
+    padding: 0px;
+    margin: 0px;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 24px;
+    height: 100%;
+    color: #666666;
+    padding-left: 5px;
+    text-align: left;
+}
 
 table.weekhour {
     position: absolute;
